--- a/train_configs/deeplabv3plus_landcoverai.yaml
+++ b/train_configs/deeplabv3plus_landcoverai.yaml
@@ -1,65 +1,41 @@
 # Define constants
-num_classes: &num_classes 4
+num_classes: &num_classes 5
 image_channels: &image_channels 3
-data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1
-one_hot_encoding: &one_hot_encoding true
+data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
 
 # Environment parameters
 random_seed: 42
-device: cpu
+device: cuda
 train_dir: trains/deeplabv3plus_landcoverai
 
 # Optimizer parameters
 optimizer: Adam
 start_lr: 0.001
-end_lr: 1e-6
+end_lr: 0.00001
 weight_decay: 0.005
 grad_accumulate_steps: 4
 
-# Loss parameters (TODO обобщить на dice, bce, combined)
+# Loss parameters
 loss:
-  - class_name: SoftCrossEntropyLoss
-    loss_weight: 0.5
-    class_weights:
-      - 0.07574
-      - 0.49794
-      - 0.08663
-      - 0.33968
-    params:
-      reduction: mean
-      smooth_factor: 0.0
-
-  - class_name: FocalLoss
-    loss_weight: 0.5
-    class_weights:
-      - 0.07574
-      - 0.49794
-      - 0.08663
-      - 0.33968
-    params:
-      mode: multiclass
-      reduction: mean
-      alpha: 0.25
-      gamma: 2.0
+  class_name: DiceLoss
+  params:
+    mode: multiclass
 
 # Training parameters
 continue_training: false
-n_epoch: 30
+n_epoch: 100
 
 # Model parameters
 model:
   class_name: DeepLabV3Plus
   params:
-    output_channels: *num_classes
-    n_stages: 5
-    initial_channels: 64
-    channels_upsampling: 2
-    image_channels: *image_channels
-    use_pad: true
-
+    encoder_name: resnet50
+    encoder_weights: imagenet
+    in_channels: *image_channels
+    classes: *num_classes
 
 # Transforms
-train_transforms: &transforms
+train_transforms:
   rotate:
     class_name: Rotate
     params:
@@ -99,7 +75,7 @@ val_transforms:
 # Dataset parameters
 train_dataset_params:
   dataset_path: "{data_root}/train"
-  one_hot_encoding: *one_hot_encoding
+  one_hot_encoding: &one_hot_encoding false
 
 val_dataset_params:
   dataset_path: "{data_root}/val"
@@ -112,12 +88,14 @@ shuffle_train: true
 shuffle_val: false
 
 # Callbacks parameters
-callback_params:
+callback:
   steps_per_call: 16
-  save_images:
+  params:
+    save_dir: "{train_dir}/images"
     only_first_image: true
     resize_shape: null
     save_stacked: true
+    show_time: null
 
 # Metrics parameters
 metrics:
@@ -125,23 +103,23 @@ metrics:
     class_name: F1Score
     params:
       task: multiclass
-      num_classes: 4
+      num_classes: *num_classes
       average: null
   dice:
-    class_name: Dice
+    class_name: DiceScore
     params:
-      task: multiclass
-      num_classes: 4
+      num_classes: *num_classes
       average: null
+      input_format: index
   pixel_acc:
     class_name: Accuracy
     params:
       task: multiclass
-      num_classes: 4
+      num_classes: *num_classes
       average: null
   iou:
     class_name: JaccardIndex
     params:
       task: multiclass
-      num_classes: 4
+      num_classes: *num_classes
       average: null
