--- a/train_configs/test_config.yaml
+++ b/train_configs/test_config.yaml
@@ -1,7 +1,8 @@
 # Define constants
 num_classes: &num_classes 5
 image_channels: &image_channels 3
-data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/test_dset
+# data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/test_dset
+data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
 
 # Environment parameters
 random_seed: 42
@@ -59,6 +60,10 @@ train_transforms:
     params:
       mean: [0.485, 0.456, 0.406]
       std: [0.229, 0.224, 0.225]
+  to_tensor:
+    class_name: ToTensorV2
+    params:
+      transpose_mask: false
 
 val_transforms:
   resize:
@@ -71,6 +76,10 @@ val_transforms:
     params:
       mean: [0.485, 0.456, 0.406]
       std: [0.229, 0.224, 0.225]
+  to_tensor:
+    class_name: ToTensorV2
+    params:
+      transpose_mask: false
 
 # Dataset parameters
 train_dataset_params:
@@ -95,7 +104,7 @@ callback:
     only_first_image: true
     resize_shape: null
     save_stacked: true
-    show_time: null
+    show_time: 0
 
 # Metrics parameters
 metrics:
