--- a/train_configs/landcoverai/deeplabv3plus/xception_sqrtweighted.yaml
+++ b/train_configs/landcoverai/deeplabv3plus/xception_sqrtweighted.yaml
@@ -1,13 +1,12 @@
 # Define constants
 num_classes: &num_classes 5
 image_channels: &image_channels 3
-data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/test_dset
-# data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
+data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
 
 # Environment parameters
 random_seed: 42
 device: cuda
-train_dir: trains/test_train
+train_dir: trains/landcoverai/deeplabv3plus/xception_sqrtweighted
 
 # Optimizer parameters
 optimizer: Adam
@@ -30,7 +29,7 @@ loss:
 
 # Training parameters
 continue_training: false
-n_epoch: 10
+n_epoch: 30
 
 # Model parameters
 model:
