--- a/train_configs/landcoverai/unet/resnet50_sqrtweighted.yaml
+++ b/train_configs/landcoverai/unet/resnet50_sqrtweighted.yaml
@@ -1,20 +1,19 @@
 # Define constants
 num_classes: &num_classes 5
 image_channels: &image_channels 3
-data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/test_dset
-# data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
+data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
 
 # Environment parameters
 random_seed: 42
 device: cuda
-train_dir: trains/test_train
+train_dir: trains/landcoverai/unet/resnet50_sqrtweighted
 
 # Optimizer parameters
 optimizer: Adam
 start_lr: 0.001
 end_lr: 0.00001
 weight_decay: 0.005
-grad_accumulate_steps: 16
+grad_accumulate_steps: 4
 
 # Loss parameters
 loss:
@@ -30,13 +29,13 @@ loss:
 
 # Training parameters
 continue_training: false
-n_epoch: 10
+n_epoch: 30
 
 # Model parameters
 model:
-  class_name: DeepLabV3Plus
+  class_name: Unet
   params:
-    encoder_name: tu-xception71
+    encoder_name: resnet50
     encoder_weights: imagenet
     in_channels: *image_channels
     classes: *num_classes
@@ -65,8 +64,8 @@ train_transforms:
   normalize:
     class_name: Normalize
     params:
-      mean: [0.5, 0.5, 0.5]
-      std: [0.5, 0.5, 0.5]
+      mean: [0.485, 0.456, 0.406]
+      std: [0.229, 0.224, 0.225]
   to_tensor:
     class_name: ToTensorV2
     params:
@@ -81,8 +80,8 @@ val_transforms:
   normalize:
     class_name: Normalize
     params:
-      mean: [0.5, 0.5, 0.5]
-      std: [0.5, 0.5, 0.5]
+      mean: [0.485, 0.456, 0.406]
+      std: [0.229, 0.224, 0.225]
   to_tensor:
     class_name: ToTensorV2
     params:
@@ -98,7 +97,7 @@ val_dataset_params:
   one_hot_encoding: *one_hot_encoding
 
 # DataLoader parameters
-batch_size: 8
+batch_size: 32
 num_workers: 8
 shuffle_train: true
 shuffle_val: false
