--- a/train_configs/landcoverai/deeplabv3plus/resnet50_sqrtweighted_30ep.yaml
+++ b/train_configs/landcoverai/deeplabv3plus/resnet50_sqrtweighted_30ep.yaml
@@ -6,20 +6,26 @@ data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
 # Environment parameters
 random_seed: 42
 device: cuda
-train_dir: trains/landcoverai/deeplabv3plus/xception
+train_dir: trains/landcoverai/deeplabv3plus/resnet50_sqrtweighted_30ep
 
 # Optimizer parameters
 optimizer: Adam
 start_lr: 0.001
 end_lr: 0.00001
 weight_decay: 0.005
-grad_accumulate_steps: 16
+grad_accumulate_steps: 4
 
 # Loss parameters
 loss:
-  class_name: DiceLoss
+  class_name: SMPDiceLossWrapper
   params:
     mode: multiclass
+    class_weights:
+      - 0.05123851220069638
+      - 0.42146013130589155
+      - 0.0677579641545095
+      - 0.1534361681589021
+      - 0.30610722418000047
 
 # Training parameters
 continue_training: false
@@ -29,7 +35,7 @@ n_epoch: 30
 model:
   class_name: DeepLabV3Plus
   params:
-    encoder_name: tu-xception71
+    encoder_name: resnet50
     encoder_weights: imagenet
     in_channels: *image_channels
     classes: *num_classes
@@ -58,8 +64,8 @@ train_transforms:
   normalize:
     class_name: Normalize
     params:
-      mean: [0.5, 0.5, 0.5]
-      std: [0.5, 0.5, 0.5]
+      mean: [0.485, 0.456, 0.406]
+      std: [0.229, 0.224, 0.225]
   to_tensor:
     class_name: ToTensorV2
     params:
@@ -74,8 +80,8 @@ val_transforms:
   normalize:
     class_name: Normalize
     params:
-      mean: [0.5, 0.5, 0.5]
-      std: [0.5, 0.5, 0.5]
+      mean: [0.485, 0.456, 0.406]
+      std: [0.229, 0.224, 0.225]
   to_tensor:
     class_name: ToTensorV2
     params:
@@ -91,7 +97,7 @@ val_dataset_params:
   one_hot_encoding: *one_hot_encoding
 
 # DataLoader parameters
-batch_size: 8
+batch_size: 32
 num_workers: 8
 shuffle_train: true
 shuffle_val: false
