--- a/train_configs/landcoverai/deeplabv3plus/xception_30ep.yaml
+++ b/train_configs/landcoverai/deeplabv3plus/xception_30ep.yaml
@@ -6,7 +6,7 @@ data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
 # Environment parameters
 random_seed: 42
 device: cuda
-train_dir: trains/landcoverai/deeplabv3plus/xception_sqrtweighted
+train_dir: trains/landcoverai/deeplabv3plus/xception_30ep
 
 # Optimizer parameters
 optimizer: Adam
@@ -17,15 +17,9 @@ grad_accumulate_steps: 16
 
 # Loss parameters
 loss:
-  class_name: SMPDiceLossWrapper
+  class_name: DiceLoss
   params:
     mode: multiclass
-    class_weights:
-      - 0.05123851220069638
-      - 0.42146013130589155
-      - 0.0677579641545095
-      - 0.1534361681589021
-      - 0.30610722418000047
 
 # Training parameters
 continue_training: false
