--- a/train_configs/landcoverai/deeplabv3plus/xception_sqrtweighted_60ep.yaml
+++ b/train_configs/landcoverai/deeplabv3plus/xception_sqrtweighted_60ep.yaml
@@ -6,14 +6,14 @@ data_root: &data_root ../data/satellite/segmentation/landcover_ai_v1/
 # Environment parameters
 random_seed: 42
 device: cuda
-train_dir: trains/landcoverai/unet/resnet50_sqrtweighted
+train_dir: trains/landcoverai/deeplabv3plus/xception_sqrtweighted_60ep
 
 # Optimizer parameters
 optimizer: Adam
 start_lr: 0.001
 end_lr: 0.00001
 weight_decay: 0.005
-grad_accumulate_steps: 4
+grad_accumulate_steps: 16
 
 # Loss parameters
 loss:
@@ -29,13 +29,13 @@ loss:
 
 # Training parameters
 continue_training: false
-n_epoch: 30
+n_epoch: 60
 
 # Model parameters
 model:
-  class_name: Unet
+  class_name: DeepLabV3Plus
   params:
-    encoder_name: resnet50
+    encoder_name: tu-xception71
     encoder_weights: imagenet
     in_channels: *image_channels
     classes: *num_classes
@@ -64,8 +64,8 @@ train_transforms:
   normalize:
     class_name: Normalize
     params:
-      mean: [0.485, 0.456, 0.406]
-      std: [0.229, 0.224, 0.225]
+      mean: [0.5, 0.5, 0.5]
+      std: [0.5, 0.5, 0.5]
   to_tensor:
     class_name: ToTensorV2
     params:
@@ -80,8 +80,8 @@ val_transforms:
   normalize:
     class_name: Normalize
     params:
-      mean: [0.485, 0.456, 0.406]
-      std: [0.229, 0.224, 0.225]
+      mean: [0.5, 0.5, 0.5]
+      std: [0.5, 0.5, 0.5]
   to_tensor:
     class_name: ToTensorV2
     params:
@@ -97,7 +97,7 @@ val_dataset_params:
   one_hot_encoding: *one_hot_encoding
 
 # DataLoader parameters
-batch_size: 32
+batch_size: 8
 num_workers: 8
 shuffle_train: true
 shuffle_val: false
